# gtk-hello

./: meson.build
data/: hello-again.appdata.xml.in  hello-again.desktop
po/: POTFILES  com.louis993546.gtk-hello.pot  de.po  es.po
src/: Application  Application.vala
